# typeshed

./: .flake8  .pre-commit-config.yaml  585.py  CONTRIBUTING.md  add_back_ignores.py  change_self_annotations.py  clean_redis_ignores.py  clean_type_ignores.py  demo.py  find_selfs.py  foo.py  missing_dunders.txt  missing_eqs.txt  private_errors.txt  pyproject.toml  pyrightconfig.stricter.json  repro_crash.py  requirements-tests.txt  third_party_results.txt  typealiases.py
.github/scripts/: stubs_clippy_download_errors.js  stubs_clippy_post_comment.js
.github/workflows/: daily.yml  meta_tests.yml  mypy_primer.yml  stubs_clippy.yml  stubs_clippy_comment.yml  stubsabot.yml  stubtest_stdlib.yml  stubtest_third_party.yml  tests.yml  typecheck_typeshed_code.yml
scripts/: code_clippy.py  generate_proto_stubs.sh  stubs_clippy.py  test_stubsabot.py
stdlib/: VERSIONS  _asyncio.pyi  _bisect.pyi  _codecs.pyi  _collections_abc.pyi  _contextvars.pyi  _ctypes.pyi  _curses.pyi  _dbm.pyi  _frozen_importlib_external.pyi  _gdbm.pyi  _hashlib.pyi  _heapq.pyi  _interpreters.pyi  _io.pyi  _locale.pyi  _operator.pyi  _osx_support.pyi  _pickle.pyi  _queue.pyi  _socket.pyi  _sqlite3.pyi  _ssl.pyi  _thread.pyi  _tkinter.pyi  _typeshed.pyi  _winapi.pyi  abc.pyi  annotationlib.pyi  argparse.pyi  array.pyi  ast.pyi  asyncore.pyi  builtins.pyi  bz2.pyi  cgi.pyi  codecs.pyi  configparser.pyi  contextlib.pyi  contextvars.pyi  (+74 more)
stdlib/_typeshed/: __init__.pyi  asyncio.pyi  numeric_tower.pyi
stdlib/asyncio/: base_events.pyi  coroutines.pyi  events.pyi  format_helpers.pyi  runners.pyi  tasks.pyi  trsock.pyi
stdlib/collections/: __init__.pyi  abc.pyi
stdlib/ctypes/: __init__.pyi
stdlib/curses/: ascii.pyi
stdlib/distutils/: ccompiler.pyi  dep_util.pyi  dist.pyi  fancy_getopt.pyi  file_util.pyi  sysconfig.pyi
stdlib/email/: __init__.pyi  message.pyi  utils.pyi
stdlib/encodings/: aliases.pyi  base64_codec.pyi  big5.pyi  bz2_codec.pyi  charmap.pyi  cp1255.pyi  cp424.pyi  cp775.pyi  cp852.pyi  cp855.pyi  cp860.pyi  euc_jis_2004.pyi  hex_codec.pyi  hp_roman8.pyi  idna.pyi  iso2022_jp.pyi  latin_1.pyi  mac_iceland.pyi  mbcs.pyi  oem.pyi  punycode.pyi  quopri_codec.pyi  rot_13.pyi  undefined.pyi  unicode_escape.pyi  utf_16.pyi  utf_16_be.pyi  utf_16_le.pyi  utf_32.pyi  utf_32_le.pyi  utf_7.pyi  (+2 more)
tests/: check_consistent.py  check_new_syntax.py  config.py  mypy_test.py  pyright_test.py  regr_test.py  typecheck_typeshed.py  utils.py
(+2729 files in other folders)
